<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    android:paddingVertical="30dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/light_bg"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/round_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/light_mode_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:src="@drawable/device_light_off_icon"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:paddingHorizontal="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/light_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/device_name"
                android:textColor="#ffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/light_device_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_mode"
                        android:textColor="#ffff"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intensity"
                        android:textColor="#ffff"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/light_device_intensity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20"
                        android:textColor="#ffff"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginStart="3dp"
                        android:text="@string/percentage"
                        android:textColor="#ffff"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>