<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe">


    <LinearLayout
        android:id="@+id/return_button_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:drawableLeft="@drawable/icon_back"
            android:text="@string/back_to_home"
            app:cornerRadius="10dp"
            app:strokeColor="@color/colorPrimary" />
    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/return_button_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/johndoe"
                        tools:ignore="ContentDescription" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/hello_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/name"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/user_info_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:elevation="5dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/user_info"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pretty_edit"
                        android:hint="@string/first_name"
                        android:textColorHint="@color/black"
                        app:hintEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_first_name_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_last_name_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_birthday_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:focusable="false"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:elevation="5dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/location_info"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_code"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_street_code_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_street_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_city_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postal_code"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_postal_code_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_country_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pretty_edit"
                            android:enabled="false"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/line_black" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/save_button_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_user_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_save"
                    android:text="@string/ok"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/colorPrimary" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
