<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    app:cardElevation="20dp"
    android:background="@drawable/round_bg"
    tools:context=".screens.activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/infos" />

            <ImageView
                android:id="@+id/action_cancel_heater"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/close" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/name_text_view_heater"
            android:layout_height="395dp"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative_layout_mode_heater"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/name_text_view_heater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/device_name"
                    android:textColor="#ffff"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/device_name_input_heater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_text_view_heater"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#ffff"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_mode_heater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mode_text_view_heater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/device_mode"
                    android:textColor="#ffff"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <Switch
                    android:id="@+id/device_mode_switch_heater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="13dp"
                    android:layout_toRightOf="@id/mode_text_view_heater" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/heater_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_input"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/device_heater_on" />

                    <NumberPicker
                        android:id="@+id/device_number_picker_heater"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_ok_heater"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_save"
                android:drawableTint="@color/white"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:strokeColor="@color/white" />


        </RelativeLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>